--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ header nav ul li a:hover {
     width: 100%;
     height: 100%;
     z-index: 1;
+    position: relative;
 }
 
 .under-slider {
@@ -223,6 +224,12 @@ header nav ul li a:hover {
     width: auto;
     height: auto;
     position: relative;
+}
+.mySlides{
+    display: none;
+}
+.mySlides.active{
+    display: block;
 }
 
 .dot {
@@ -246,6 +253,40 @@ header nav ul li a:hover {
     transform: translateY(-20px);
 }
 
+.dot.active{
+    transform: translateY(-20px);
+}
+
+
+.progress{
+    position: absolute;
+    width: 100px;
+    height: 5px;
+    /* background-color: red; */
+    bottom: 15%;
+    right: 60px;
+}
+
+.progress_bar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    animation: progress 5s linear;
+}
+
+@keyframes progress{
+    0%{
+        width: 0;
+    }
+
+    100%{
+        width: 100%;
+    }
+}
+
 
 .prev,
 .next {
@@ -264,11 +305,11 @@ header nav ul li a:hover {
     border-radius: 10px;
 }
 
-.next {
+.prev {
     left: 10px;
 }
 
-.prev {
+.next {
     right: 10px;
 }
 
@@ -385,7 +426,7 @@ header nav ul li a:hover {
 
 
 .product-box {
-    cursor: pointer;
+    cursor: auto;
     position: relative;
     margin-top: 5rem;
 }
@@ -445,6 +486,41 @@ header nav ul li a:hover {
     animation: fadeout 0.5s ease;
     animation-fill-mode: forwards;
 }
+
+.add_shop{
+    position: absolute;
+    width: 60px;
+    height: 30px;
+    background-color: rgb(254, 74, 27);
+    top: 15px;
+    left: 20px;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    visibility: hidden;
+}
+
+.product-box:hover .add_shop{
+    /* visibility: visible; */
+    animation: shopshow .3s ease-in-out forwards;
+}
+
+@keyframes shopshow{
+    0%{
+        opacity: 0;
+        visibility: hidden;
+    }
+    100%{
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+
 
 @keyframes fadeout{
     0%{
@@ -1245,6 +1321,10 @@ header nav ul li a:hover {
 
     /*product */
 
+    .all-images{
+        height: auto;
+    }
+
     .product-img {
         height: 250px !important;
         width: 250px !important;
@@ -1280,10 +1360,6 @@ header nav ul li a:hover {
 
     /* next-page */
 
-    .all-images{
-        height: auto;
-    }
-    
     .change-page-content .next-page p {
         left: 25px;
     }
@@ -1687,6 +1763,12 @@ header nav ul li a:hover {
 
 
 @media screen and (max-width:576px) {
+
+
+    .progress{
+        bottom: 20%;
+        right: 30px;
+    }
 
     #nav {
         width: 256px;
